Update with Code Cleaning

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,6 +21,13 @@ spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto= update
 
 
+#spring.datasource.url=jdbc:postgresql://postgresqldb:5432/bookingdb
+#spring.datasource.username=postgres
+#spring.datasource.password=postgres
+#spring.jpa.show-sql=true
+#spring.jpa.generate-ddl=true
+#spring.jpa.hibernate.ddl-auto=create
+
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
